<resources>
    <string name="app_name">FlirtyTalk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="log_in">Log-in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="city_optional">City - optional.</string>
    <string name="bio_optional">Bio - optional.</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="first_name">First name</string>
    <string name="avatar">avatar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="logout">Logout</string>

    <string name="f">f</string>
    <string name="m">m</string>
    <string name="name_is_required">Name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="please_provide_valid_email">Please provide valid email</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_must_be_at_leas_6_characters">Password must be at least 6 characters</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="register_not_succeeded">Register not succeeded</string>
    <string name="signed_in_successfully">Signed in successfully</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="error_writing_document">Error writing document</string>





</resources>