<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flirtytalk.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_postDetailsFragment"
            app:destination="@id/postDetailsFragment"
            app:launchSingleTop="false" >
            <argument
                android:name="post_id" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.flirtytalk.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.flirtytalk.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/postDetailsFragment"
        android:name="com.example.flirtytalk.PostDetailsFragment"
        android:label="fragment_post_details"
        tools:layout="@layout/fragment_post_details" >
        <argument
            android:name="post_id"
            app:argType="string" />
    </fragment>
</navigation>